# snpseq-metadata-service

./: README.md  pyproject.toml
.github/workflows/: tests.yml
config/: app.yaml  logger.yaml
metadata_service/: app.py  clients.py  handlers.py  process.py  utils.py
tests/: test_app.py  test_clients.py
tests/config/: app.yaml  logger.yaml
tests/test_data/: AB-1234-experiment.xml  AB-1234-run.xml  AB-1234.metadata.ena.tsv  CD-5678-experiment.xml  CD-5678-run.xml  CD-5678.metadata.ena.tsv  EF-9012-experiment.xml  EF-9012-run.xml  EF-9012.metadata.ena.tsv
